@@ -32,6 +32,7 @@ GenericCmdDependency "espeak"
  
 GenericPunctNone ""
 GenericPunctSome "--punct=\"()[]{};:\""
+GenericPunctMost "--punct=\"()[]{};:\""
 GenericPunctAll "--punct"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
