@@ -31,6 +31,7 @@ GenericCmdDependency "mbrola"
  
 GenericPunctNone ""
 GenericPunctSome "--punct=\"()[]{};:\""
+GenericPunctMost "--punct=\"()[]{};:\""
 GenericPunctAll "--punct"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
@@ -209,7 +210,7 @@ Debug 0
 
 # Copyright (C) 2008-2010 Brailcom, o.p.s
 # Copyright (C) 2014 Luke Yelavich <themuso@ubuntu.com>
-# Copyright (C) 2018-2019 Samuel Thibault <samuel.thibault@ens-lyon.org>
+# Copyright (C) 2018-2020 Samuel Thibault <samuel.thibault@ens-lyon.org>
 # Copyright (C) 2018 Didier Spaier <didier@slint.fr>
 #
 # This program is free software; you can redistribute it and/or modify it under
