@@ -33,6 +33,7 @@ GenericCmdDependency "curl"
 
 GenericPunctNone ""
 GenericPunctSome "--punct=\"()[]{};:\""
+GenericPunctMost "--punct=\"()[]{};:\""
 GenericPunctAll "--punct"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
