@@ -109,7 +109,7 @@ chosen synthesizer.  Most users will probably not wish to set it, but
 this setting is provided for completeness.
 </p></dd>
 <dt><code>-m or --punctuation-mode</code></dt>
-<dd><p>Set the punctuation mode (none, some, all).  Default see below.
+<dd><p>Set the punctuation mode (none, some, most, all).  Default see below.
 </p></dd>
 <dt><code>-s or --spelling</code></dt>
 <dd><p>Spell the message.
