@@ -2113,9 +2113,9 @@ Dispatcher in its configuration (&ldquo;flite&rdquo;, &ldquo;festival&rdquo;,  &
 <dd><span id="index-spd_005fset_005fpunctuation_0028_0029"></span>
 
 <p>Set punctuation mode to the given value.  &lsquo;all&rsquo; means speak all
-punctuation characters, &lsquo;none&rsquo; menas speak no punctuation characters,
-&lsquo;some&rsquo; means speak only punctuation characters given in the server
-configuration or defined by the client&rsquo;s last spd_set_punctuation_important().
+punctuation characters, &lsquo;none&rsquo; means speak no punctuation characters,
+&lsquo;some&rsquo; and &lsquo;most&rsquo; mean speak intermediate sets of punctuation characters as
+set in symbols tables or output modules.
 </p>
 <p><code>connection</code> is the SPDConnection* connection created by spd_open().
 </p>
